# alfred-pa

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  litellm-config.example.yaml  prometheus.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_memory_vector_768.py  003_add_slack_user_id.py  004_add_focus_mode_tables.py  005_add_pomodoro_session_config.py  006_add_session_starred.py  007_add_dashboard_tables.py  008_add_bypass_notification_config.py  009_add_notes_table.py  010_add_notes_tags.py  011_add_system_settings.py  012_add_slack_status_customization.py  013_add_encryption_and_multi_account.py  014_encrypt_existing_tokens.py  015_add_github_app_configs.py  016_add_todos_table.py  017_add_todo_slack_thread_fields.py  018_add_session_type.py  019_add_youtube_tables.py  020_add_youtube_playlist_archived.py  021_add_session_summary_fields.py  022_add_triage_tables.py  023_add_triage_display_names.py  024_add_classification_reviewed_at.py  025_add_custom_classification_rules.py  026_digest_consolidation.py  027_slack_channel_cache.py  028_add_reauth_dm_sent_at.py  029_refactor_triage_priorities.py  030_add_always_on_min_priority.py  031_add_runtime_type_to_coding_jobs.py  032_add_user_repos.py  033_add_alert_tracking_fields.py  034_add_summary_cadence_config.py  035_add_digest_type_field.py  036_add_conversation_summaries.py  037_add_updated_at_to_conversation_summaries.py  1776930921_drop_user_response_tracking_columns.py  324b85746fc7_add_queued_for_digest_field.py  4b639b6a5062_add_processed_reason_to_triage_.py  (+10 more)
backend/app/: main.py
backend/app/agents/: __init__.py  alfred.py  graph.py  nodes.py  state.py
backend/app/api/: __init__.py  admin.py  auth.py  calendar.py  coding_jobs.py  dashboard.py  deps.py  focus.py  github.py  google_calendar.py  memories.py  notes.py  notifications.py  sessions.py  slack.py  todos.py  triage.py  user_repositories.py  webhooks.py  youtube.py
backend/app/core/: __init__.py  config.py  config_validator.py  embeddings.py  llm.py  oauth_state.py  redis.py  security.py  summarize.py  tokens.py
backend/app/db/: __init__.py  base.py  seed.py  session.py
backend/app/schemas/: __init__.py  auth.py  calendar.py  coding_job.py  dashboard.py  focus.py  github.py  google_calendar.py  memory.py  message.py  note.py  session.py  todo.py  triage.py  user_repository.py  webhook.py  youtube.py
backend/app/scripts/: migrate_conversation_summaries.py
backend/app/services/: __init__.py  alert_deduplication.py  bart.py  bypass_notify.py  coding_job.py  (+31 more)
backend/scripts/: test_digest_flow.py  trigger_digest.py
backend/tests/: conftest.py  factories.py  test_agent.py  test_auth.py  test_conversation_summary_repository.py  test_encryption.py  test_focus_orchestrator.py  test_focus_orchestrator_triage.py  test_health.py  test_messages.py  test_sessions.py  test_slack_reauth.py  test_summarize.py  test_todo_notifications.py  test_todos.py  test_tokens.py  test_tools.py  test_triage_classifier.py
(+281 files in other folders)
