[project]
name = "alfred-backend"
version = "0.1.0"
description = "Alfred AI Assistant Backend"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",
    # Redis
    "redis>=5.0.0",
    # LangGraph & LLM
    "langgraph>=0.0.50",
    "langchain>=0.1.0",
    "langchain-google-vertexai>=0.0.6",
    "google-cloud-aiplatform>=1.38.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    # HTTP Client
    "httpx>=0.26.0",
    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Observability
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",
    "structlog>=24.1.0",
    # Slack
    "slack-sdk>=3.26.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    # Linting & Formatting
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    # Type stubs
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
